# codecontext-ai

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TEST_RESULTS.md  UPGRADE_GUIDE.md  demo_advisory.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  setup_environment.sh  test_basic.py  train.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_request.md
.github/workflows/: train-model.yml
codecontext_ai/: __init__.py  advisory.py  cli.py  evaluation.py  guidance_cli.py  inference.py  ollama_integration.py  rag.py
codecontext_ai/prompts/: architecture.json  best_practices.json  component.json  implementation.json  readme.json
configs/: advisory.yaml  api.yaml  architecture.yaml  best_practices.yaml  changelog.yaml  component.yaml  implementation.yaml  readme.yaml
examples/: advisory_usage.py
scripts/: benchmark_all.py  check_model_size.py  convert_to_gguf.py  prepare_advisory_dataset.py  prepare_dataset.py  upload_to_hub.py
tests/: __init__.py  test_advisory.py  test_evaluation.py  test_inference.py
